--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,4 +16,5 @@
     <string name="database_update_success">Joueur mis à jour avec succès</string>
     <string name="database_update_failure">Joueur sans succès mis à jour</string>
     <string name="database_delete">Tous les joueurs supprimés</string>
+    <string name="sms_permission">Se requiere permiso para enviar mensajes SMS para que esta función funcione</string>
 </resources>
