--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="database_update_success">Player successfully updated</string>
     <string name="database_update_failure">Player unsuccessfully updated</string>
     <string name="database_delete">All players successfully deleted</string>
+    <string name="sms_permission">Permission to send SMS messages is required for this function to work</string>
 </resources>
